tests/ui/subquery_types_sqlite/fail/tuple_element_type_mismatch.stderr
error[E0277]: SQL type `drizzle::sqlite::types::Integer` is not compatible with `drizzle::sqlite::types::Text`
  --> tests/ui/subquery_types_sqlite/fail/tuple_element_type_mismatch.rs:31:14
   |
30 |         .r#where(in_subquery(
   |                  ----------- required by a bound introduced by this call
31 |             (left_users.id, left_users.name),
   |              ^^^^^^^^^^^^^ these SQL types cannot be compared or coerced
   |
   = help: the trait `Compatible<drizzle::sqlite::types::Text>` is not implemented for `drizzle::sqlite::types::Integer`
   = note: compatible types include: integers with integers/floats, text with text/varchar, and any type with itself
   = help: `drizzle::sqlite::types::Integer` implements trait `Compatible<Rhs>`:
             Compatible<drizzle::core::types::Placeholder>
             Compatible<drizzle::sqlite::types::Any>
             Compatible<drizzle::sqlite::types::Numeric>
             Compatible<drizzle::sqlite::types::Real>
             Compatible
   = note: required for `(drizzle::sqlite::types::Integer, drizzle::sqlite::types::Text)` to implement `Compatible<(drizzle::sqlite::types::Text, drizzle::sqlite::types::Integer)>`
note: required by a bound in `drizzle::core::expr::in_subquery`
  --> core/src/expr/set.rs
   |
   | pub fn in_subquery<'a, V, L, S, M>(
   |        ----------- required by a bound in this function
...
   |     L::SQLType: Compatible<S::SQLType>,
   |                 ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `in_subquery`

error[E0277]: SQL type `drizzle::sqlite::types::Text` is not compatible with `drizzle::sqlite::types::Integer`
  --> tests/ui/subquery_types_sqlite/fail/tuple_element_type_mismatch.rs:31:29
   |
30 |         .r#where(in_subquery(
   |                  ----------- required by a bound introduced by this call
31 |             (left_users.id, left_users.name),
   |                             ^^^^^^^^^^^^^^^ these SQL types cannot be compared or coerced
   |
   = help: the trait `Compatible<drizzle::sqlite::types::Integer>` is not implemented for `drizzle::sqlite::types::Text`
   = note: compatible types include: integers with integers/floats, text with text/varchar, and any type with itself
help: `drizzle::sqlite::types::Text` implements trait `Compatible<Rhs>`
  --> types/src/sql/coerce.rs
   |
   |           $(impl Compatible<$ty> for $ty {})+
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Compatible`
...
   |               impl Compatible<$rest> for $first {}
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Compatible<drizzle::sqlite::types::Blob>`
...
   |               impl Compatible<$any> for $ty {}
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Compatible<drizzle::sqlite::types::Any>`
...
   |               impl Compatible<crate::Placeholder> for $ty {}
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Compatible<drizzle::core::types::Placeholder>`
...
   | / impl_reflexive_compat!(
   | |     crate::sqlite::types::Integer,
   | |     crate::sqlite::types::Text,
   | |     crate::sqlite::types::Real,
...  |
   | |     crate::postgres::types::Enum,
   | | );
   | |_- in this macro invocation
...
   |   mutual_compat!(crate::sqlite::types::Text, crate::sqlite::types::Blob);
   |   ---------------------------------------------------------------------- in this macro invocation
...
   | / any_compat!(crate::sqlite::types::Any;
   | |     crate::sqlite::types::Integer,
   | |     crate::sqlite::types::Text,
   | |     crate::sqlite::types::Real,
   | |     crate::sqlite::types::Blob,
   | |     crate::sqlite::types::Numeric
   | | );
   | |_- in this macro invocation
   |
   | / impl_placeholder_compat!(
   | |     crate::sqlite::types::Integer,
   | |     crate::sqlite::types::Text,
   | |     crate::sqlite::types::Real,
...  |
   | |     crate::sqlite::types::Any
   | | );
   | |_- in this macro invocation
   = note: required for `(drizzle::sqlite::types::Integer, drizzle::sqlite::types::Text)` to implement `Compatible<(drizzle::sqlite::types::Text, drizzle::sqlite::types::Integer)>`
note: required by a bound in `drizzle::core::expr::in_subquery`
  --> core/src/expr/set.rs
   |
   | pub fn in_subquery<'a, V, L, S, M>(
   |        ----------- required by a bound in this function
...
   |     L::SQLType: Compatible<S::SQLType>,
   |                 ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `in_subquery`
   = note: this error originates in the macro `impl_reflexive_compat` which comes from the expansion of the macro `impl_placeholder_compat` (in Nightly builds, run with -Z macro-backtrace for more info)
